# bloq_it

./: README.md  docker-compose.yml
diagrams/: architecture.md
gateway-py/: Dockerfile  main.py
qr-c/: .gitignore  CMakeLists.txt  Dockerfile  README.md  process.py
qr-c/inc/: qr.h  qr_core.h
qr-c/src/: logging.c  main.c  qr.c  qr_core.c
